Security config and RSAPrivate and Public key bug fix

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,6 @@ spring.data.mongodb.database=BirdRed
 spring.data.mongodb.repositories.enabled=true
 
 spring.data.mongodb.auto-index-creation=true
+
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
