implementing permissions for admin to list users and fixing bugs

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,3 +9,6 @@ spring.data.mongodb.auto-index-creation=true
 
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
+
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.security=DEBUG
